<resources>
    <string name="app_name">ProyectoCoaspharma</string>
    <string name="bottom_nav_especial">Especialidad</string>
    <string name="bottom_nav_busqueda">Busqueda</string>
    <string name="bottom_nav_crearvisita">Crear Visita</string>
    <string name="bottom_nav_enlaces">Enlaces</string>
    <string name="bottom_nav_visitas">Visitas</string>
    <string name="crear_visita">Crear visita</string>
    <string name="b_squeda">Búsqueda</string>
    <string name="especialidad">Especialidad</string>
    <string name="enlaces">Enlaces</string>
    <string name="visitas_creadas">Visitas creadas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>